# AutoResearch

./: .env.example  .gitignore  CLAUDE.md  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
docs/: architecture.md
paper_agent/: __init__.py  batch.py  cache.py  checkpoint.py  chunking.py  comparison.py  config.py  graph.py  history.py  nodes.py  pdf_reader.py  progress.py  prompts.py  qa_mode.py  research_assistant.py  retry.py  token_tracker.py  types.py  ui.py
paper_agent/cache/: __init__.py  cache_key.py  disk_cache.py  lru_cache.py
paper_agent/extractors/: __init__.py  citation_extractor.py  code_extractor.py  figure_extractor.py  reproducibility_analyzer.py
paper_agent/formatters/: __init__.py  base_formatter.py  bilingual_formatter.py  chart_generator.py  html_formatter.py  json_formatter.py  markdown_formatter.py  pdf_formatter.py
paper_agent/nodes/: __init__.py  adaptive.py  analysis.py  base.py  extraction.py  input.py  output.py
test/: __init__.py  test_adaptive_graph.py  test_interactive_mode.py  test_quality_assessment.py
